--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -55,7 +55,7 @@
     <p>Aplikacja może używać usług firm trzecich, np. Google AdMob, które mogą zbierać dane techniczne (np. IP, system, urządzenie).</p>
 
     <h2>5. RODO</h2>
-    <p>Użytkownicy z UE mogą być proszeni o zgodę na reklamy spersonalizowane. W przypadku braku zgody – wyświetlane są reklamy niespersonalizowane.</p>
+    <p>Aplikacja wyświetla wyłącznie niespersonalizowane reklamy, które nie wymagają zgody użytkownika zgodnie z przepisami RODO. Dane użytkownika nie są wykorzystywane do profilowania ani personalizacji reklam.</p>
 
     <h2>6. Kontakt</h2>
     <p>W razie pytań: 📧 gamesparowka@gmail.com</p>
@@ -82,7 +82,7 @@
     <p>The app may use third-party services like Google AdMob, which may collect technical data (e.g. IP, OS, device).</p>
 
     <h2>5. GDPR</h2>
-    <p>Users in the EU may be asked for consent to personalized ads. If not granted, non-personalized ads are shown.</p>
+    <p>The app displays only non-personalized ads that do not require user consent under the GDPR. No personal data is used for profiling or ad targeting.</p>
 
     <h2>6. Contact</h2>
     <p>For questions: 📧 gamesparowka@gmail.com</p>
@@ -109,7 +109,7 @@
     <p>Die App kann Dienste Dritter wie Google AdMob verwenden, die technische Daten (z. B. IP, Betriebssystem, Gerät) erfassen können.</p>
 
     <h2>5. DSGVO</h2>
-    <p>Nutzer aus der EU können um Zustimmung zu personalisierter Werbung gebeten werden. Ohne Zustimmung wird nicht personalisierte Werbung angezeigt.</p>
+    <p>Die App zeigt ausschließlich nicht personalisierte Werbung an, die gemäß der DSGVO keine Zustimmung erfordert. Es werden keine personenbezogenen Daten für Profiling oder Werbung verwendet.</p>
 
     <h2>6. Kontakt</h2>
     <p>Bei Fragen: 📧 gamesparowka@gmail.com</p>
