--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -58,7 +58,7 @@
     <p>Aplikacja wyświetla wyłącznie niespersonalizowane reklamy, które nie wymagają zgody użytkownika zgodnie z przepisami RODO. Dane użytkownika nie są wykorzystywane do profilowania ani personalizacji reklam.</p>
 
     <h2>6. Kontakt</h2>
-    <p>W razie pytań: 📧 gamesparowka@gmail.com</p>
+    <p>W razie pytań: 📧 kontakt.gamesparowka@gmail.com</p>
 
     <h2>7. Zmiany</h2>
     <p>Zastrzegamy sobie prawo do zmian w polityce. Aktualizacje będą publikowane na tej stronie.</p>
@@ -85,7 +85,7 @@
     <p>The app displays only non-personalized ads that do not require user consent under the GDPR. No personal data is used for profiling or ad targeting.</p>
 
     <h2>6. Contact</h2>
-    <p>For questions: 📧 gamesparowka@gmail.com</p>
+    <p>For questions: 📧 kontakt.gamesparowka@gmail.com</p>
 
     <h2>7. Changes</h2>
     <p>We reserve the right to change this policy. Updates will be posted on this page.</p>
@@ -112,7 +112,7 @@
     <p>Die App zeigt ausschließlich nicht personalisierte Werbung an, die gemäß der DSGVO keine Zustimmung erfordert. Es werden keine personenbezogenen Daten für Profiling oder Werbung verwendet.</p>
 
     <h2>6. Kontakt</h2>
-    <p>Bei Fragen: 📧 gamesparowka@gmail.com</p>
+    <p>Bei Fragen: 📧 kontakt.gamesparowka@gmail.com</p>
 
     <h2>7. Änderungen</h2>
     <p>Wir behalten uns das Recht vor, diese Richtlinie zu ändern. Änderungen werden auf dieser Seite veröffentlicht.</p>
